--- a/estilos.css
+++ b/estilos.css
@@ -20,7 +20,7 @@ body {
 
 #inicio p {
   font-size: 18px;
-  color: #555;
+  color: #af1f1f;
 }
 
 /* Estilos para la sección "Sobre Mí" */
@@ -35,13 +35,13 @@ body {
 
 #sobre-mi p {
   font-size: 18px;
-  color: #555;
+  color: #f7f0f0;
   line-height: 1.5;
 }
 
 /* Estilos para el encabezado */
 header {
-  background-color: #333;
+  background-color: #050433;
   color: #fff;
   padding: 20px;
 }
