--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@ body {
 
 /* Estilos para la sección "Inicio" */
 #inicio {
-  background-color: #f2f2f2;
+  background-color: #cfdfd8;
   padding: 50px;
 }
 
